tests/snapshots/run_wpt_conformance__coreml_reduceMax_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_max.https.any.js reduceMax float32 0D tensor empty axes, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_max: Param 'x' has incorrect type for operator 'ios16.reduce_max'. Expected { tensor<fp32, [?, ...]>, tensor<fp16, [?, ...]>, tensor<int32, [?, ...]> }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMaxInput: f32[];
  }

  nodes {
    [reduceMaxOutput] = reduceMax(reduceMaxInput, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceMaxOutput; }
}
