tests/snapshots/run_wpt_conformance__coreml_reduceMean_float16_1D_constant_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_mean.https.any.js reduceMean float16 1D constant tensor all positive default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983319803_0_3EA90A07-D1E5-4DFC-B06A-AC7436052753.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([254, 85, 187, 84, 43, 62, 101, 72, 97, 84, 228, 74, 0, 77, 237, 85, 117, 78, 226, 85, 60, 84, 6, 76, 195, 85, 201, 73, 151, 82, 158, 77, 83, 67, 13, 77, 82, 83, 43, 79, 68, 81, 105, 77, 21, 75, 144, 75]);
  }

  nodes {
    [reduceMeanOutput] = reduceMean(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMeanOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983319803_0_3EA90A07-D1E5-4DFC-B06A-AC7436052753.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
