tests/snapshots/run_wpt_conformance__coreml_reduceMean_float32_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_mean.https.any.js reduceMean float32 0D constant tensor empty axes, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_mean: Param 'x' has incorrect type for operator 'ios16.reduce_mean'. Expected { tensor<fp16, [?, ...]>, tensor<fp32, [?, ...]>, tensor<int32, [?, ...]> }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([162, 176, 191, 66]);
  }

  nodes {
    [reduceMeanOutput] = reduceMean(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceMeanOutput; }
}
