tests/snapshots/run_wpt_conformance__coreml_reduceMean_float32_4D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_mean.https.any.js reduceMean float32 4D tensor options.axes, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceMeanInput' must be of rank 3, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMeanInput: f32[2, 2, 2, 3];
  }

  nodes {
    [reduceMeanOutput] = reduceMean(reduceMeanInput, axes=[0, 2], keepDimensions=false, label="");
  }

  outputs { reduceMeanOutput; }
}
